<?xml version="1.0"?>
<package format="2">
  <name>proteus</name>
  <version>0.1.0</version>
  <description>The proteus package, which contains language and symbol definitions, as well as common library code and the central proteus server node.</description>

  <maintainer email="fulto081@umn.edu">Michael Fulton</maintainer>
  <license>GPLv3</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>catkin</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
